<resources>
    <string name="app_name">Riekes Pairs</string>

    <string name="action_newgame">New game</string>
    <string name="action_settings">Settings</string>

    <string name="card_imageview_description">card</string>

    <string name="player_one_wins_imageview_description">Player One wins!</string>
    <string name="player_two_wins_imageview_description">Player Two wins!</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>

    <string name="prefs_game_header">Game</string>
    <string name="prefs_style_header">Style</string>

    <!-- Game Preferences -->
    <string name="prefs_game_card_count_key" translatable="false">prefs_game_card_count</string>
    <string name="prefs_game_card_count_title">Card count</string>
    <string name="prefs_game_card_count_summary">3x2, 4x3, 4x4, ...</string>
    <string name="prefs_game_card_count_default_value" translatable="false">3x2</string>
    <string-array name="prefs_game_card_count_values">
        <item>3x2</item>
        <item>4x3</item>
        <item>4x4</item>
        <item>5x4</item>
        <item>6x4</item>
        <item>6x5</item>
        <item>6x6</item>
    </string-array>

    <!-- Style Preferences -->
    <string name="prefs_style_card_back_key" translatable="false">prefs_style_card_back</string>
    <string name="prefs_style_card_back_title">Card back-color</string>
    <string name="prefs_style_card_back_summary">Blue, purple or red</string>
    <string-array name="prefs_style_card_entries">
        <item>Blue</item>
        <item>Purple</item>
        <item>Red</item>
    </string-array>

    <string name="prefs_style_card_default_value" translatable="false">purple</string>
    <string-array name="prefs_style_card_value">
        <item>blue</item>
        <item>purple</item>
        <item>red</item>
    </string-array>


    <string name="prefs_style_avatar_player_one" translatable="false">prefs_style_avatar_player_one</string>
    <string name="prefs_style_avatar_player_one_title">Avatar of first player</string>
    <string name="prefs_style_avatar_player_one_default" translatable="false">cat</string>

    <string name="prefs_style_avatar_player_two" translatable="false">prefs_style_avatar_player_two</string>
    <string name="prefs_style_avatar_player_two_title">Avatar of second player</string>
    <string name="prefs_style_avatar_player_two_default" translatable="false">dog</string>

    <string-array name="prefs_style_avatar_entries">
        <item>Ape</item>
        <item>Bear</item>
        <item>Cat</item>
        <item>Chicken</item>
        <item>Cow</item>
        <item>Dog</item>
        <item>Elephant</item>
        <item>Giraffe</item>
        <item>Hamster</item>
        <item>Hippo</item>
        <item>Horse</item>
        <item>Koala</item>
        <item>Lion</item>
        <item>Mouse</item>
        <item>Panda</item>
        <item>Pig</item>
        <item>Rabbit</item>
        <item>Reindeer</item>
        <item>Sheep</item>
        <item>Tiger</item>
    </string-array>

    <string-array name="prefs_style_avatar_values">
        <item>ape</item>
        <item>bear</item>
        <item>cat</item>
        <item>chicken</item>
        <item>cow</item>
        <item>dog</item>
        <item>elephant</item>
        <item>giraffe</item>
        <item>hamster</item>
        <item>hippo</item>
        <item>horse</item>
        <item>koala</item>
        <item>lion</item>
        <item>mouse</item>
        <item>panda</item>
        <item>pig</item>
        <item>rabbit</item>
        <item>reindeer</item>
        <item>sheep</item>
        <item>tiger</item>
    </string-array>

    <string name="TAG_CARD_STATE_BACK" translatable="false">BACK</string>
    <string name="TAG_CARD_STATE_EMPTY" translatable="false">EMPTY</string>

</resources>
